--- a/index.html
+++ b/index.html
@@ -1,7 +1,32 @@
 <!DOCTYPE html><html><head><title>TatkalRequest Refund Policy</title>
 </head>
-<body>
+<style>
+  .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+  
+  </style>
+  
+  <body>
 <h1>Booked tickets </h1>
+  <img src="https://res.cloudinary.com/dlmt4hsgw/image/upload/v1604759491/Screenshot_2020-11-07-19-56-53-93.jpg" alt="booking" class="center">
+
+    <br></br>
+  
+    <br></br>
+
+    <br></br>
+
+    <br></br>
+
+    <br></br>
+  
+  <img src="https://res.cloudinary.com/dlmt4hsgw/image/upload/v1604759454/Screenshot_2020-11-07-19-56-34-84.jpg" alt="booking" class="center">
+  
+  
 </body>
   
 </html>
