--- a/index.html
+++ b/index.html
@@ -25,8 +25,39 @@
     <br></br>
   
   <img src="https://res.cloudinary.com/dlmt4hsgw/image/upload/v1604759454/Screenshot_2020-11-07-19-56-34-84.jpg" alt="booking" class="center">
+  <br></br>
   
+    <br></br>
+
+    <br></br>
+
+    <br></br>
+
+    <br></br>
+    <img src="https://res.cloudinary.com/dlmt4hsgw/image/upload/v1605194311/Screenshot_2020-11-12-20-43-28-80.jpg" alt="booking" class="center">
+<br></br>
   
+    <br></br>
+
+    <br></br>
+
+    <br></br>
+
+    <br></br>
+
+<img src="https://res.cloudinary.com/dlmt4hsgw/image/upload/v1605194424/Screenshot_2020-11-12-20-43-19-82.jpg" alt="booking" class="center">
+<br></br>
+  
+    <br></br>
+
+    <br></br>
+
+    <br></br>
+
+    <br></br>
+
+<img src="https://res.cloudinary.com/dlmt4hsgw/image/upload/v1605194448/Screenshot_2020-11-12-20-39-43-65.jpg" alt="booking" class="center">
+
 </body>
   
 </html>
