--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>TatkalRequest Refund Policy</title>
+<!DOCTYPE html><html><head><title>TatkalRequest Recent Bookings</title>
 </head>
 <style>
   .center {
