--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   
   <body>
 <h1>Booked tickets </h1>
+        <iframe src="https://res.cloudinary.com/dlmt4hsgw/image/upload/v1607222683/R_BPL.pdf" class="center">
+
     
-      <img src="https://res.cloudinary.com/dlmt4hsgw/image/upload/v1607222683/R_BPL.pdf" alt="booking" class="center">
     <br></br>
 
     <br></br>
