--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <body>
 <h1>Booked tickets </h1>
-        <iframe src="https://res.cloudinary.com/dlmt4hsgw/image/upload/v1607222683/R_BPL.pdf" class="center">
+        <iframe src="https://res.cloudinary.com/dlmt4hsgw/image/upload/v1607222683/R_BPL.pdf" width="100%" height="500px">
 
     
     <br></br>
